Added support for a seperate interceptor chain.
The firtst interceptor chain is executed when dispatching the event on
hte callers thread. The second one runs around the command handler on
the same thread as the command handler.